Fixed Error Resulting From Unclosed Tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,6 @@ body {
     }
   header {
     text-align: center;
-    object-position: top, center;
-  }
+    object-position: top, center;}
 
 }
